About section and img placeholders
Finished about section
Put in some image placeholders
Redid some styling
Using normalize now instead of base.css

--- a/index.html
+++ b/index.html
@@ -9,66 +9,87 @@
     <title>Jack Kinsey</title>
 
     <!-- External CSS -->
-    <link href="http://d2v52k3cl9vedd.cloudfront.net/basscss/6.1.4/basscss.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Marvel|Raleway|Oswald' rel='stylesheet' type='text/css'>
 
     <!-- Project CSS -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon-196x196.png">
 </head>
 <body>
     <!-- Hero header - Full Page image -->
     <header>
         <h1>Jack Kinsey</h1>
         <img class="logo" src="assets/logo.png">
-        <h4>developer | programmer | designer</h4>
+        <h4>developer // programmer // designer</h4>
         <nav>
             <div class="nav-item"><a href="#about">ABOUT</a></div>
             <div class="nav-item"><a href="#skills">SKILLS</a></div>
             <div class="nav-item"><a href="#work">WORK</a></div>
-            <div class="nav-item"><a href="#blog">BLOG</a></div>
+            <div class="nav-item"><a href="#">BLOG</a></div>
         </nav>
     </header>
 
     <!-- About Section -->
     <section class="about">
-        <h2><a name="about">About Me</h2>
+        <h2><a name="about">About Me</a></h2>
         <div class="content">
             <img src="assets/me.jpeg">
             <p>
-                Hello, my name is Jack. Welcome to my portfolio site!
+                Hello, World! My name is Jack Kinsey. I am a programmer,
+                developer, and designer. I love to solve problems, make those
+                solutions awesome and pretty, and, most importantly, have a
+                blast doing it.
             </p>
             <p>
-                More content is coming soon! This is just some filler text
-                for now! :)
+                My favorite past-time is gaming, and my favorite game of all
+                time is <em>Super Metroid</em>. Currently, I'm dying my way
+                through <em>Bloodborne</em> and monster hunting my way through
+                <em>The Witcher 3</em>. I also play music and currently slap
+                the bass in the band, <a href="http://www.kineticmusiconline.com">Kinetic</a>.
+            </p>
+            <p>
+                I spend most of my time turning caffeine into code, and I just
+                had to look up how to spell <em>caffeine</em>. I work mostly on
+                web, mobile, and game related projects. I am currently looking
+                for work, so take a look at my past work below, and feel free
+                to get in touch!
+            </p>
+            <p>
+                In other news, my wife and I are expecting our first minion
+                soon, at which time we shall begin our quest for world domination.
             </p>
         </div>
     </section>
 
+    <hr />
+
     <!-- Skills Section -->
     <section class="skills">
         <h2><a name="skills">Skills</a></h2>
+        <div class="skill-images">
+            <img src="assets/responsive-design.jpeg">
+            <img src="assets/full-stack.jpeg">
+            <img src="assets/game-dev.jpeg">
+            <img src="assets/mobile-dev.jpeg">
+        </div>
 
-        <!-- Skill images -->
-        <img class="skill-01" src="assets/skill01.jpeg">
-        <img class="skill-02" src="assets/skill02.jpeg">
-        <img class="skill-03" src="assets/skill03.jpeg">
-        <img class="skill-04" src="assets/skill04.jpeg">
+        <div class="skill-info">
 
-        <!-- Skill info...show when hovering over corresponding image -->
-        <div class="skill-01-info">Skill 01 info goes here.</div>
-        <div class="skill-02-info">Skill 02 info goes here.</div>
-        <div class="skill-03-info">Skill 03 info goes here.</div>
-        <div class="skill-04-info">Skill 04 info goes here.</div>
+        </div>
     </section>
+
+    <hr />
 
     <!-- Work Section -->
     <section class="work">
         <h2><a name="work">Work</a></h2>
 
     </section>
+
+    <hr />
 
     <!-- Contact Section -->
     <section class="contact">
@@ -80,7 +101,8 @@
     <footer>
         <p>
             &copy; 2015 Jack Kinsey.
-            Header Image courtesy of <a href="http://www.unsplash.com">Unsplash</a>
+            Header Image courtesy of
+            <a href="http://www.unsplash.com">Unsplash</a>
         </p>
     </footer>
 </body>
